--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,13 @@ body {
   width: auto;
   height: 100%;
   margin: 0;
-  background-image: url('background.jpg');
+  background-image: url('backimgM.jpg');
   background-size: auto;
   background-repeat: no-repeat;
   background-position-x: center;
   background-position-y: top;
   font-family: myFirstFont;
   font-size: 16px;
-}
-@media (min-width: 768px) {
-  body {
-    font-size: 14px;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 }
 body .shadow {
   background-color: rgba(250, 250, 250, 0.3);
@@ -38,7 +31,7 @@ body .content-page {
 }
 body .section {
   background: white;
-  padding: 100px 25px;
+  padding: 25px 10px;
 }
 .my-select {
   background: transparent;
@@ -55,6 +48,18 @@ a:hover {
   font-weight: bold;
   text-decoration: none;
   color: black;
+}
+@media (min-width: 768px) {
+  body {
+    font-size: 14px;
+    background-image: url('backimg1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  body .section {
+    padding: 100px 25px;
+  }
 }
 
 
